# network_perf_tests

./: .gitignore  README.md
WindowsPowerShell/: analyze_iperf_json.py  wifi_run.ps1  wifi_test_template.csv
analysis_output/: summary.csv
artifacts_macbook_wifi_primary_router_test1_20250905_130859/: iperf_macbook_wifi_primary_router_20250905_130859_tcp_dl.json  iperf_macbook_wifi_primary_router_20250905_130859_tcp_ul.json  ping_macbook_wifi_primary_router_20250905_130859_gw.txt  ping_macbook_wifi_primary_router_20250905_130859_wan.txt  wlan_macbook_wifi_primary_router_20250905_130859_summary.json
artifacts_macbook_wifi_testA_20250905_125635/: iperf_macbook_wifi_20250905_125635_tcp_dl.json  ping_macbook_wifi_20250905_125635_gw.txt  ping_macbook_wifi_20250905_125635_wan.txt  wlan_macbook_wifi_20250905_125635_summary.json
artifacts_macbook_wifi_testA_20250905_130511/: iperf_macbook_wifi_20250905_130511_tcp_dl.json  ping_macbook_wifi_20250905_130511_gw.txt  ping_macbook_wifi_20250905_130511_wan.txt  wlan_macbook_wifi_20250905_130511_summary.json
network_perf_tests/: README.md  pyproject.toml  requirements.txt
network_perf_tests/scripts/: find_iperf.sh  install_deps.sh
network_perf_tests/src/: __main__.py  cli.py  iperf.py  ping.py  runner.py  utils.py  wlan.py
network_perf_tests/src/platform/: macos.py  windows.py
network_perf_tests/tests/: test_platform.py  test_runner.py
results/analysis_output/: report.html  summary.csv
scripts/: analyze_traceroute.py  plot_results.py  wifi_run_macos.sh
wifi_tests/: wifi_test_suite.ps1
(+39 files in other folders)
